--- a/src/components/CardItem.css
+++ b/src/components/CardItem.css
@@ -30,14 +30,14 @@
     filter: drop-shadow(0px 0px 10px #00000033);
     /* border: solid 1px red; */
     border-radius: 16px;
-    transition: all 0.3s ease-in-out 100ms;
+    transition: all 0.5s ease-in-out 10ms;
 }
 
 img {
-    transition: all 500ms ease-in-out 10ms;
+    transition: all 800ms ease-in-out 10ms;
 }
 
-.wrapper:hover .p-img {
+.projectitem-wrapper:hover .p-img {
     transform: scale(1.1);
 }
 
