--- a/src/components/Sidebar.css
+++ b/src/components/Sidebar.css
@@ -3,6 +3,7 @@
     top: 0px;
     left: 0px;
     max-width: 30vw;
+    min-width: 25vw;
     height: 100vh;
     background-color: #dddddd;
     padding: 3%;
