--- a/src/components/CardItem.css
+++ b/src/components/CardItem.css
@@ -4,15 +4,16 @@
     border-radius: 20px;
     transition: all 300ms ease-in-out 10ms;
 
-    max-width: 437px;
-    width: 100%;
-    max-height: 184px;
+    /* max-width: 437px; */
+    width: calc(50% - 20px);
+    /* max-height: 184px; */
     height: 100%;
 }
 
 .projectitem-wrapper > a {
     display: flex;
     justify-content: space-between;
+    align-items: center;
     gap: 10px;
     padding: 20px 28px;
     overflow: hidden;
@@ -25,13 +26,18 @@
 }
 
 .project-img {
-    flex-basis: 219px;
-    height: 143px;
+    /* flex-basis: 219px;
+    height: 143px; */
+    align-self: center;
     overflow: hidden;
     filter: drop-shadow(0px 0px 10px #00000033);
     /* border: solid 1px red; */
     border-radius: 16px;
     transition: all 0.5s ease-in-out 10ms;
+}
+
+.p-img {
+    width: -webkit-fill-available;
 }
 
 img {
@@ -61,7 +67,7 @@ a {
     color: rgba(0, 0, 0, 0.75);
 }
 
-@media screen and (max-width: 767px) {
+@media screen and (max-width: 1290px) {
     .projectitem-wrapper {    
         max-width: 90%;
         max-height: 100%;
@@ -89,5 +95,11 @@ a {
         max-width: 100%;
         width: 100%;
         word-wrap: break-word;
+    }
+}
+
+@media screen and (max-width: 500px) {
+    .projectitem-wrapper {
+        flex-basis: 100%;
     }
 }
