--- a/src/components/Contact.css
+++ b/src/components/Contact.css
@@ -1,24 +1,25 @@
 .contact-wrapper {
-    display: grid;
-    gap: 20px;
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
 }
 
 .contact-wrapper-line-one, .contact-wrapper-line-three {
     display: flex;
     flex-wrap: wrap;
-    gap: 20px;
+    gap: 10px;
 }
 
 .group-box {
     display: flex;
     flex-wrap: wrap;
-    gap: 20px;
+    gap: 10px;
     flex: 1 0 calc(50% - 10px);
 }
 
 .box {
     height: auto;
-    flex: 1 0 160px;
+    flex: 1 0 120px;
     border: solid 1px rgba(0, 0, 0, 0.2);
     border-radius: 20px;
     padding: 15px;
@@ -73,16 +74,22 @@
 
 .contact-wrapper-line-two {
     display: flex;
-    gap: 20px;
+    gap: 10px;
     flex-wrap: wrap;
+    max-width: 100%;
 }
 
 .showcase {
     display: flex;
-    /* width: calc(49% - 10px); */
-    max-width: 460px;
+    /* width: calc(49% - 10px);
+    max-width: 450px; */
+    /* width: auto;
+    max-width: 80vw; */
     height: auto;
     padding: 0px 20px;
+    box-sizing: border-box;
+    flex-basis: calc(50% - 40px);
+    max-width: calc(50% - 40px);
     overflow: hidden;
     background: #cacaca;
     mix-blend-mode: normal;
@@ -91,20 +98,41 @@
 }
 
 .showcase, .contact-showcase-right {
-    flex: 1 0 377px;
+    flex-basis: calc(50% - 5px);
+    flex-grow: 1;
+    flex-shrink: 1;
+    max-width: calc(50% - 5px);
 }
 
 .contact-showcase-right {
     display: flex;
     flex-wrap: wrap;
-    gap: 20px;
+    gap: 10px;
+}
+
+@media only screen and (max-width: 900px) {
+    .contact-wrapper-line-two {
+      flex-wrap: wrap;
+      max-width: 90vw;
+    }
+  
+    .contact-showcase-right, .showcase {
+      flex-basis: 100%;
+      max-width: 100%;
+    }
+
+    .showcase {
+        padding: 0;
+    }
+  
 }
 
 .contact-showcase-line {
-    flex: 1 0;
+    flex-grow: 1;
+    flex-shrink: 1;
     display: flex;
     flex-wrap: wrap;
-    gap: 20px;
+    gap: 10px;
 }
 
 @media only screen and (max-width: 500px) {
@@ -112,33 +140,34 @@
         flex: none;
     }
 
-    .contact-wrapper-line-two {
-        display: block !important;
-    }
-
-    .contact-showcase-line {
-        flex-wrap: wrap;
-    }
-
-    .contact-showcase-right {
-        max-height: 900px;
-    }
-
-    .showcase {
-        width: 100%;
-        height: 412px;
-        margin-bottom: 20px;
-    }
-
     .contact-wrapper-line-one, .contact-wrapper-line-three {
         display: block;
     }
 
     .group-box {
-        margin-block: 20px;
+        margin-block: 10px;
     }
 
 }
+
+@media screen and (min-width: 768px) and (max-width: 1100px) {
+    .contact-wrapper-line-two {
+        flex-wrap: wrap;
+        max-width: 55vw;
+      }
+    
+      .contact-showcase-right {
+        flex-basis: 100%;
+        max-width: 100%;
+      }
+    
+      .showcase {
+        flex-basis: 100%;
+        max-width: 100%;
+        padding: 0;
+      }
+  }
+  
 
 /* specify the box colors */
 
