--- a/src/components/Contact.css
+++ b/src/components/Contact.css
@@ -1,25 +1,25 @@
 .contact-wrapper {
     display: flex;
     flex-direction: column;
-    gap: 10px;
+    gap: 20px;
 }
 
 .contact-wrapper-line-one, .contact-wrapper-line-three {
     display: flex;
     flex-wrap: wrap;
-    gap: 10px;
+    gap: 20px;
 }
 
 .group-box {
     display: flex;
     flex-wrap: wrap;
-    gap: 10px;
-    flex: 1 0 calc(50% - 10px);
+    gap: 20px;
+    flex: 1 1 calc(50% - 20px);
 }
 
 .box {
     height: auto;
-    flex: 1 0 120px;
+    flex: 1 1 120px;
     border: solid 1px rgba(0, 0, 0, 0.2);
     border-radius: 20px;
     padding: 15px;
@@ -74,7 +74,7 @@
 
 .contact-wrapper-line-two {
     display: flex;
-    gap: 10px;
+    gap: 20px;
     flex-wrap: wrap;
     max-width: 100%;
 }
@@ -98,16 +98,16 @@
 }
 
 .showcase, .contact-showcase-right {
-    flex-basis: calc(50% - 5px);
+    flex-basis: calc(50% - 10px);
     flex-grow: 1;
     flex-shrink: 1;
-    max-width: calc(50% - 5px);
+    max-width: calc(50% - 10px);
 }
 
 .contact-showcase-right {
     display: flex;
     flex-wrap: wrap;
-    gap: 10px;
+    gap: 20px;
 }
 
 @media only screen and (max-width: 900px) {
@@ -132,7 +132,7 @@
     flex-shrink: 1;
     display: flex;
     flex-wrap: wrap;
-    gap: 10px;
+    gap: 20px;
 }
 
 @media only screen and (max-width: 500px) {
@@ -145,10 +145,20 @@
     }
 
     .group-box {
-        margin-block: 10px;
+        margin-block: 20px;
+    }
+
+    .contact-wrapper {
+        gap: 0px;
     }
 
 }
+
+/* @media only screen and (max-width: 767px) {
+    .contact-wrapper {
+        gap: 0px;
+    }
+} */
 
 @media screen and (min-width: 768px) and (max-width: 1100px) {
     .contact-wrapper-line-two {
