--- a/src/components/Sidebar.css
+++ b/src/components/Sidebar.css
@@ -54,6 +54,7 @@ a {
     .side-bar {
         position: relative;
         max-width: 100vw;
-
+        height: auto;
+        padding: 10% 3%;
     }
 }
