--- a/src/components/Sidebar.css
+++ b/src/components/Sidebar.css
@@ -42,6 +42,19 @@ a {
     border: solid 1px #000000;
     border-radius: 100px;
     padding: 12px 30px;
+    transition: all 300ms ease-in-out 10ms;
+}
+
+.btn:hover {
+    background-color: #0A66C2;
+    color: #ffffff;
+    border-color: #0A66C2;
+}
+
+.btn:active, Link:active {
+    background-color: #09162e;
+    color: #ffffff;
+    border-color: #09162e;
 }
 
 .foot {
