--- a/src/components/Menu.css
+++ b/src/components/Menu.css
@@ -12,7 +12,7 @@
     border-radius: 99px;
     border: 1px solid rgba(0, 0, 0, 0.2);
     box-shadow: 0 0px 1px #111111;
-    transition: all 400ms ease-in-out 10ms;
+    transition: all 100ms ease-in-out 10ms;
     display: flex;
     justify-content: space-evenly;
     align-items: center;
@@ -25,7 +25,7 @@
 
 .mobile-menu  a {
     flex-basis: 80px;
-    transition: all 400ms ease-in-out 10ms;
+    transition: all 300ms ease-in-out 10ms;
 }
 
 .menu-item {
@@ -33,7 +33,8 @@
     flex-direction: column;
     align-items: center;
     cursor: pointer;
-    transition: all 400ms ease-in-out 10ms;
+    overflow: hidden;
+    transition: all 300ms ease-in-out 10ms;
 }
 
 .menu-item-name {
@@ -41,30 +42,36 @@
     font-size: 12px;
     font-weight: 500;
     text-align: center;
-    display: none;
-    transition: all 800ms ease-in-out;
+    height: 0px;
+    transition: all 300ms ease-in-out;
 }
 
 .menu-item:hover .menu-item-name {
-    display: block;
+    height: 100%;
 }
 
 .mobile-menu > a.active .menu-item-name {
-    display: block;
+    height: 100%;
+}
+
+a {
+    transition: all 400ms ease-in-out;
 }
 
 a.active {
-    border: solid 1px #000000;
-    padding: 10px 3px;
-    border-radius: 100px;
-    background-color: #ffffff;
-    transform: translate(0px, -10px);
+    border-bottom: 2px solid #09162e;
+    padding: 5px 1px;
+    transform: translate(0px, -5px);
 }
 
 svg {
     width: 24px;
     height: 24px;
-    transition: all 400ms ease-in-out 10ms;
+    transition: all 300ms ease-in-out 10ms;
+}
+
+a.active > .menu-item > svg, a.active > .menu-item > .menu-item-name {
+    color: #09162e;
 }
 
 
