--- a/src/components/Sidebar.css
+++ b/src/components/Sidebar.css
@@ -9,6 +9,9 @@
     padding: 3%;
     overflow: hidden;
     text-align: center;
+    box-shadow: 5px 0px 10px rgba(0, 0, 0, 0.25),  inset -5px 0px 25px -10px rgba(0,0,0,0.7);
+    -webkit-box-shadow:  inset -5px 0px 25px -10px rgba(0,0,0,0.7);
+    -moz-box-shadow:  inset -5px 0px 25px -10px rgba(0,0,0,0.7);
 }
 
 h1 {
@@ -69,5 +72,8 @@ a {
         max-width: 100vw;
         height: auto;
         padding: 10% 3%;
+        box-shadow: 5px 0px 10px rgba(0, 0, 0, 0.25),  inset -5px 0px 25px -10px rgba(0,0,0,0.7);
+        -webkit-box-shadow:  inset 0px -5px 15px -12px rgba(0,0,0,0.7);
+        -moz-box-shadow:  inset -5px 0px 25px -10px rgba(0,0,0,0.7);
     }
 }
