--- a/src/components/Sidebar.css
+++ b/src/components/Sidebar.css
@@ -13,6 +13,7 @@
     box-shadow: 5px 0px 10px rgba(0, 0, 0, 0.25),  inset -5px 0px 25px -10px rgba(0,0,0,0.7);
     -webkit-box-shadow:  inset -5px 0px 25px -10px rgba(0,0,0,0.7);
     -moz-box-shadow:  inset -5px 0px 25px -10px rgba(0,0,0,0.7);
+    box-sizing: border-box;
 }
 
 h1 {
